--- a/navbar.css
+++ b/navbar.css
@@ -2,6 +2,14 @@ body {
   font-family: 'Ubuntu', sans-serif;
 }
 
+#logo {
+  position: absolute;
+  top: 0em;
+  left: 0em;
+  height:100%;
+  width:auto;
+}
+
 #navBarDiv {
   position: fixed;
   top: 0;
@@ -61,7 +69,7 @@ body {
 
 .sign a{
   padding: 0.05em 0.15em;
-  background: linear-gradient(30deg, #30CFD0 0%, #330867 100%););
+  background: linear-gradient(30deg, #30CFD0 0%, #330867 100%);
   -webkit-background-clip: text;
   background-clip: text;
 	color: transparent;
@@ -70,5 +78,9 @@ body {
   border-image-source: linear-gradient(30deg, #30CFD0 0%, #330867 100%);
   border-image-slice: 1;
   margin-right: 0.2em;
+}
+
+#active{
+  color:#BA1200
 }
 
