--- a/navbar.css
+++ b/navbar.css
@@ -7,6 +7,7 @@ body {
   top: 0em;
   left: 0em;
   height:100%;
+  z-index: 1;
   width:auto;
 }
 
@@ -14,6 +15,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 1;
   right: 0;
   background-color: white;
   box-shadow: 0em 0.1em 1em #aaaaaa;
@@ -40,6 +42,7 @@ body {
    list-style-type: none;
    text-align: center;
    display: inline;
+   z-index: 1;
 }
 
 .vl {
@@ -68,6 +71,7 @@ body {
 }
 
 .sign a{
+  z-index: 1;
   padding: 0.05em 0.15em;
   background: linear-gradient(30deg, #30CFD0 0%, #330867 100%);
   -webkit-background-clip: text;
