--- a/footer/footer.css
+++ b/footer/footer.css
@@ -1,8 +1,8 @@
 footer {
   font-family: 'Open Sans', sans-serif;
-  position: fixed;
-  left: 0;
-  bottom: 0;
+  position: absolute;
+  left: 0em;
+  bottom: -40em;
   width: 100%;
   background-color: #2C365E;
   color: white;
