--- a/signin_style.css
+++ b/signin_style.css
@@ -53,7 +53,7 @@ li a
     padding: 40px;
     width:300px;
     height: 400px;
-    /*background-image: url(rightimage.jpg);*/
+    background-image: url(rightimage_new.jpg);
 }
 .or
 {
