Final Changes For The Day

--- a/signin_style.css
+++ b/signin_style.css
@@ -7,6 +7,7 @@ body
     color: #BA1200;
     font-family: 'Ubuntu', sans-serif;
     font-weight: 300; 
+    /*background-image: url(sign_inbackground.jpg); */
 }
 ul
 {
