--- a/signup_style.css
+++ b/signup_style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Ubuntu', sans-serif;
+    background-image: url(sign_upbackground.jpg);
   }
 #sign_up
 {
@@ -86,11 +87,15 @@ input[type="submit"]:focus
     border-radius: 0.5em;
     text-align: center;
     padding: 0.5em;
+    background-image: url(sign_upcard.jpg);
 }
 
 .cardTitle {
-    font-weight: 500;
-    font-size: 1.75em;
+    font-weight: 2000;
+    font-size: 2.75em;
+    color: #BA1200;
+    font-style: bold;
+
 }
 
 .cardImg {
@@ -105,8 +110,8 @@ margin-bottom: 0;
 #sign_up
 {
     position: relative;
-    margin: 10% auto;
-    height:400px;
+    margin:  1% auto;
+    height:300px;
     width: 600px;
     background: rgba(255, 255, 255, 0.555);
     /*box-shadow: 0 2px 4px rgba(0,0,0,0.6);*/
