--- a/snip.css
+++ b/snip.css
@@ -45,6 +45,7 @@ border-radius: 16px;
     display: none;
     margin-bottom: 1em;
     color: black;
+    padding: 0em 1em;
 }
 
 .medal {
@@ -65,4 +66,10 @@ border-radius: 16px;
     cursor: pointer;
     font-weight: 700;
     color: black;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
