--- a/signup_style.css
+++ b/signup_style.css
@@ -87,7 +87,7 @@ input[type="submit"]:focus
     border-radius: 0.5em;
     text-align: center;
     padding: 0.5em;
-    background-image: url(signupcardback.jpg);
+    background-image: url(cardback.jpg);
 }
 
 .cardTitle {
