--- a/footer/footer.css
+++ b/footer/footer.css
@@ -3,7 +3,7 @@ footer {
   position: absolute;
   left: 0em;
   bottom: -40em;
-  width: 100%;
+  width: 147%;
   background-color: #2C365E;
   color: white;
   border: 0.1em solid #2C365E;
@@ -24,7 +24,7 @@ footer h2 {
 
 footer .footer__block {
   text-align: center;
-  margin: 0em 5em;
+  margin: 0em 3em;
   float: left;
 }
 
@@ -106,6 +106,7 @@ div .clearText {
 
 footer img {
     margin-top: 3em;
+    margin-left: 3em;
 }
 
 footer #controlBoxTa {
@@ -115,4 +116,12 @@ footer #controlBoxTa {
 #btn {
   position: relative;
   top: -2em;
+}
+
+li#location {
+  margin-left: 3em;
+}
+
+h2#location {
+  margin-left: 2em;
 }
