--- a/footer/footer.css
+++ b/footer/footer.css
@@ -2,7 +2,7 @@ footer {
   font-family: 'Open Sans', sans-serif;
   position: absolute;
   left: 0em;
-  bottom: -40em;
+  bottom: -40em; /* To make the footer a bit below the actual body of the text to be inserted */
   width: 100%;
   background-color: #2C365E;
   color: white;
@@ -11,7 +11,7 @@ footer {
 }
 
 body {
-  overflow-x: hidden;
+  overflow-x: hidden; /* Reason why there is no scroll bar for the footer */
 }
 
 footer #gap {
