--- a/signin_style.css
+++ b/signin_style.css
@@ -68,7 +68,7 @@ li a
     box-shadow: 0 2px 4px rgba(0,0,0,0.6);
     line-height: 40px;
     text-align: center;
-    font-style: bold;
+    font-weight: bold;
 }
 h1
 {
